--- a/client/src/css/homepage.css
+++ b/client/src/css/homepage.css
@@ -1,8 +1,8 @@
 .searchAndButtons {
     display: flex;
-    justify-content: center;
     flex-direction: column;
     align-items: center;
+    height: 85%;
 }
 
 .searchBarBody {
