--- a/client/src/css/loading.css
+++ b/client/src/css/loading.css
@@ -1,9 +1,33 @@
-.loading {
+@keyframes slideDown {
+    0% {
+        transform: translateY(-200%);
+    }
+
+    100% {
+        transform: translateY(0%);
+    }
+}
+
+@keyframes slideUp {
+    0% {
+        transform: translateY(0%);
+    }
+
+    100% {
+        transform: translateY(-200%);
+    }
+}
+
+.loadingParent {
     position: absolute;
     left: 0;
     right: 0;
     top: 7rem;
     z-index: 10;
+    transform: translateY(-200%);
+}
+
+.loading {
     display: flex;
     flex-direction: column;
     align-items: center;
