--- a/client/src/css/searchResult.css
+++ b/client/src/css/searchResult.css
@@ -1,3 +1,17 @@
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.searchResultParent {
+  opacity: 0;
+}
+
 .searchResultTitle {
   display: flex;
   justify-content: center;
@@ -41,7 +55,7 @@
   cursor: pointer;
 }
 
-.searchResultItem:hover > .searchResultName {
+.searchResultItem:hover>.searchResultName {
   color: white;
 }
 
@@ -58,10 +72,12 @@
   .searchResultTitle {
     font-size: 1.8rem;
   }
+
   .searchResultItem {
     min-width: 25rem;
     max-width: 25rem;
   }
+
   .searchResultName {
     font-size: 1.55rem;
   }
@@ -71,10 +87,12 @@
   .searchResultTitle {
     font-size: 1.75rem;
   }
+
   .searchResultItem {
     min-width: 22rem;
     max-width: 22rem;
   }
+
   .searchResultName {
     font-size: 1.25rem;
   }
