--- a/client/src/css/viewComposer.css
+++ b/client/src/css/viewComposer.css
@@ -1,3 +1,12 @@
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .viewComposerMainBody {
   margin-top: 2rem;
   width: 100%;
@@ -5,6 +14,7 @@
   margin-right: auto;
   display: flex;
   gap: 0rem 5rem;
+  opacity: 0;
 }
 
 .left {
