--- a/client/src/css/viewWorks.css
+++ b/client/src/css/viewWorks.css
@@ -1,3 +1,12 @@
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .worksBody {
   display: flex;
   flex-direction: column;
@@ -5,7 +14,8 @@
   margin-top: 6rem;
   width: fit-content;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto; 
+  opacity: 0;
 }
 
 .workTitle {
@@ -76,38 +86,8 @@
 }
 
 .playButton {
+  display: inline-block;
   cursor: pointer;
-}
-
-/* Key Frames  */
-@keyframes noteAnimation {
-  0% {
-    transform: translateY(0%);
-  }
-  50% {
-    transform: translateY(-50%);
-  }
-  100% {
-    transform: translateY(0%);
-  }
-}
-
-@keyframes fadeIn {
-  0% {opacity: 0;}
-  100% {opacity: 1;}
-}
-
-@keyframes slideUp {
-  0% {
-    transform: translateY(0%);
-    display: block;
-    opacity: 100%;
-  }
-  100% {
-    transform: translateY(-300%);
-    display: none;
-    opacity: 0%;
-  }
 }
 
 @media (max-width: 975px) {
