--- a/client/src/css/viewComposer.module.css
+++ b/client/src/css/viewComposer.module.css
@@ -15,6 +15,7 @@
 .viewComposerMainBody {
   margin-top: 2rem;
   width: 100%;
+  height: 120vh;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -68,7 +69,7 @@
 .exploreCard {
   display: flex;
   flex-direction: column;
-  padding-bottom: 10rem;
+  padding-bottom: 2rem;
   min-width: 90%;
 }
 
@@ -114,7 +115,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem 0rem;
-  margin-top: 2rem;
+  margin-top: 3rem;
   max-width: 35%;
 }
 
@@ -218,87 +219,51 @@
   }
 }
 
-@media (max-width: 1200px) {
-  #finishedLoading {
-    flex-direction: column;
+@media (max-width: 1280px) {
+  .left {
+    padding-left: 3rem;
+    gap: 0.5rem 0rem;
   }
 
-  .left {
-    max-width: 85%;
+  .viewComposerMainBody {
+    margin-top: 1.75rem;
+    gap: 0rem 3rem;
+  }
+
+  .composerImage {
+    width: 200px;
+  }
+
+  .composerDescription {
+    line-height: 1.5rem;
+    font-size: 1rem;
+  }
+
+  .exploreGenres {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1rem 2rem;
+    margin: 1rem 0rem 1rem 0rem;
+    overflow: hidden;
+  }
+
+  .genreCard {
+    border-radius: 10px;
+    height: 8rem;
+    width: 8rem;
+    line-height: 8rem;
   }
 
   .right {
-    padding-left: 5rem;
-    max-width: 100%;
-    padding-bottom: 8rem;
+    max-width: 40%;
   }
 
-  .exploreCard {
-    padding-bottom: 0rem;
+  .timeLine {
+    gap: 0rem 1rem;
   }
 
   .timeLineWords {
-    padding-right: 5rem;
-  }
-}
-
-@media (max-width: 636px) {
-  .composerFacts {
+    grid-template-rows: 8.8rem 8.8rem 8.8rem 8.8rem;
     font-size: 1rem;
-  }
-
-  #finishedLoading {
-    padding-left: 2rem;
-  }
-}
-
-@media (max-width: 770px) {
-  .composerImageAndDescription {
-    padding-right: 5rem;
-  }
-
-  .composerImageAndDescription {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem 0rem;
-  }
-
-  .genreCard {
-    height: 7rem;
-    width: 7rem;
-    font-size: 1rem;
-    line-height: 7rem;
-  }
-}
-
-@media (max-width: 574px) {
-  .composerImage {
-    float: none;
-    width: 320px;
-  }
-
-  .composerImageAndDescription {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem 0rem;
-  }
-
-  .genreCard {
-    height: 7rem;
-    width: 7rem;
-    font-size: 1rem;
-    line-height: 7rem;
-  }
-}
-
-@media (max-width: 510px) {
-  .composerDescription {
-    padding-right: 4rem;
-  }
-}
-
-@media (max-width: 387px) {
-  .exploreGenres {
-    grid-template-columns: repeat(auto-fill, minmax(9rem, 1fr));
   }
 }
