--- a/client/src/css/searchResult.module.css
+++ b/client/src/css/searchResult.module.css
@@ -38,7 +38,7 @@
   align-items: center;
   justify-items: center;
   flex-direction: column;
-  margin-top: 4rem;
+  margin-top: 2rem;
   margin-bottom: 6rem;
 }
 
@@ -67,7 +67,7 @@
 .searchResultItem {
   display: flex;
   align-items: center;
-  border: 1px solid gray;
+  border: 1px solid rgba(128, 128, 128, 0.705);
   border-radius: 10px;
   width: 25rem;
   margin-bottom: 1rem;
