--- a/client/src/css/map.module.css
+++ b/client/src/css/map.module.css
@@ -38,8 +38,8 @@
     height: 2.5rem;
     position: absolute;
     z-index: 10;
-    left: 15%;
-    top: 1.9%;
+    left: 10%;
+    top: 1.2%;
     background-color: white;
     border-radius: 2px;
     display: flex;
@@ -72,7 +72,7 @@
     width: 28.25rem;
     border-radius: 2px;
     background-color: white;
-    padding: 0.45rem 0.2rem 1.9rem 0.7rem;
+    padding: 0.55rem 0.2rem 1.9rem 0.7rem;
     z-index: 10;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -80,4 +80,15 @@
 .nameBox {
     font-size: 0.9rem;
     padding-left: 0.2rem;
+}
+
+@media (max-width: 1280px) {
+    .infoParent {
+        left: 15%;
+        top: 1.9%;
+    }
+
+    .infoWords {
+        padding: 0.45rem 0.2rem 1.9rem 0.7rem;
+    }
 }
