--- a/client/src/css/viewWorks.module.css
+++ b/client/src/css/viewWorks.module.css
@@ -17,7 +17,7 @@
   flex-direction: column;
   margin-bottom: 3rem;
   margin-top: 4rem;
-  min-width: 72%;
+  min-width: 47%;
   width: fit-content;
   margin-left: auto;
   margin-right: auto;
@@ -29,6 +29,11 @@
   font-weight: bold;
   text-align: center;
   margin-bottom: 3rem;
+}
+
+.filterWorksHeader {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .workHeader {
@@ -63,22 +68,8 @@
   cursor: pointer;
 }
 
-@media (max-width: 975px) {
-  .workHeader {
-    grid-template-columns: 30rem 8rem 1.5rem;
-  }
-
-  .workCard {
-    grid-template-columns: 30rem 8rem 1.5rem;
-  }
-}
-
-@media (max-width: 975px) {
-  .workHeader {
-    grid-template-columns: 30rem 8rem 1.5rem;
-  }
-
-  .workCard {
-    grid-template-columns: 30rem 8rem 1.5rem;
+@media (max-width: 1280px) {
+  .worksBody {
+    min-width: 72%;
   }
 }
