--- a/client/src/css/signIn.module.css
+++ b/client/src/css/signIn.module.css
@@ -46,10 +46,9 @@
     background-color: white;
     border-radius: 5px;
     border: 1px solid lightgray;
-    width: 13rem;
+    width: 13.7rem;
+    font-size: 1rem;
     padding: 0.25rem;
-    padding-top: 0.15rem;
-    padding-bottom: 0.15rem;
     text-align: center;
 }
 
@@ -74,7 +73,7 @@
     gap: 0rem 0.5rem;
     color: white;
     margin-top: 0.75rem;
-    margin-bottom: 0.75rem;
+    margin-bottom: 0.8rem;
 }
 
 .bar {
