--- a/client/src/css/allComposers.module.css
+++ b/client/src/css/allComposers.module.css
@@ -12,16 +12,18 @@
   animation: fadeIn 500ms forwards 1;
 }
 
-.searchResMainBody {
+.allCompMainBody {
   display: flex;
   justify-content: center;
+  max-height: 93.25vh;
+  overflow-y: scroll;
 }
 
-.searchResultParent {
+.allCompParent {
   opacity: 0;
 }
 
-.searchResultTitle {
+.allCompTitle {
   display: flex;
   justify-content: center;
   margin-top: 5rem;
@@ -33,13 +35,21 @@
   color: brown;
 }
 
-.searchResultBody {
+.allCompBody {
   display: flex;
   align-items: center;
   justify-items: center;
   flex-direction: column;
   margin-top: 2rem;
   margin-bottom: 6rem;
+  width: 67.75vw;
+}
+
+.allComposersHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 67.75vw;
 }
 
 .sectionHeader {
@@ -57,7 +67,7 @@
   padding-left: 0.1rem;
 }
 
-.searchResultGrid {
+.allCompGrid {
   display: grid;
   gap: 0rem 3rem;
   grid-template-columns: repeat(3, 1fr);
@@ -74,7 +84,7 @@
   font-weight: bold;
 }
 
-.searchResultItem {
+.allCompItem {
   display: flex;
   align-items: center;
   border: 1px solid rgba(128, 128, 128, 0.705);
@@ -85,35 +95,56 @@
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
 }
 
-.searchResultItem:hover {
+.allCompItem:hover {
   background-color: brown;
   cursor: pointer;
 }
 
-.searchResultItem:hover>.searchResultName {
+.allCompItem:hover>.allCompItemName {
   color: white;
 }
 
-.searchResultImage {
+.allCompItemImage {
   border-radius: 10%;
 }
 
-.searchResultName {
+.allCompItemName {
   margin-left: 0.75rem;
   font-size: 1.5rem;
 }
 
-.searchResultLink {
+.allCompItemLink {
   text-decoration: none;
   color: black;
 }
 
+.button {
+  border: 1px solid black;
+  background-color: white;
+  color: black;
+  border-radius: 5px;
+  padding: 0.3rem 1rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: brown;
+  color: white;
+}
+
+.buttonImage:hover {
+  color: white;
+}
+
 @media (max-width: 1280px) {
-  .searchResultGrid {
+  .allCompGrid {
     grid-template-columns: repeat(3, 1fr);
   }
 
-  .searchResultItem {
+  .allCompItem {
     width: 20rem;
   }
 }
