--- a/client/src/css/viewWorks.module.css
+++ b/client/src/css/viewWorks.module.css
@@ -12,16 +12,22 @@
   animation: fadeIn 500ms forwards 1;
 }
 
+.worksMainBody {
+  max-height: 93.25vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
 .worksBody {
   display: flex;
   flex-direction: column;
-  margin-bottom: 3rem;
-  margin-top: 4rem;
-  min-width: 47%;
   width: fit-content;
   margin-left: auto;
   margin-right: auto;
   opacity: 0;
+  width: 65vw;
+  padding: 4rem 21rem 2rem 21rem;
+  border: 1px solid peru;
 }
 
 .workTitle {
@@ -55,7 +61,7 @@
 
 .workHeader {
   display: grid;
-  grid-template-columns: 40rem 10rem 1.5rem;
+  grid-template-columns: 42rem 17rem 11rem 1.5rem;
   column-gap: 2rem;
   font-size: 1.5rem;
   font-weight: bold;
@@ -69,7 +75,7 @@
 
 .workCard {
   display: grid;
-  grid-template-columns: 40rem 10rem 1.5rem;
+  grid-template-columns: 42rem 17rem 11rem 1.5rem;
   column-gap: 2rem;
   align-items: center;
   font-size: 1.2rem;
