--- a/client/src/css/navigation.module.css
+++ b/client/src/css/navigation.module.css
@@ -6,7 +6,7 @@
     background-color: #a52a2a;
     padding: 0.5rem 0rem;
     z-index: 10;
-    height: 5vh;
+    height: 7vh;
 }
 
 .navTitle {
@@ -14,6 +14,10 @@
     font-size: 2.5rem;
     display: flex;
     align-items: center;
+}
+
+.navTitleLogo {
+    width: 50px;
 }
 
 .signIn {
@@ -28,7 +32,7 @@
 
 .sidebarParent {
     position: absolute;
-    height: 93.25vh;
+    height: 92vh;
     border-right: 1px solid black;
     overflow-x: hidden;
     box-shadow: 10px 0 10px -8px rgba(0, 0, 0, 0.1);
@@ -49,9 +53,9 @@
 .sidebarItem {
     display: flex;
     align-items: center;
-    margin-left: 0.3vw;
+    margin-left: 0.3rem;
     gap: 0rem 1.25rem;
-    width: 12.8vw;
+    width: 95%;
     border-radius: 10px;
     border: 1px solid white;
     padding: 0.3rem 0rem 0.25rem 0.25rem;
@@ -63,7 +67,7 @@
 }
 
 .sidebarIcon {
-    font-size: 1.75rem;
+    width: 2.5rem;
 }
 
 .sidebarText {
@@ -129,4 +133,20 @@
 
 .profileButtonIcon {
     padding-top: 0.1rem;
+}
+
+@media (max-width:1280px) {
+
+
+    .navTitle {
+        font-size: 2rem;
+    }
+
+    .navTitleLogo {
+        width: 40px;
+    }
+
+    /* .sidebarText {
+        font-size: 1rem;
+    } */
 }
