--- a/client/src/css/homepage.module.css
+++ b/client/src/css/homepage.module.css
@@ -5,6 +5,7 @@
     align-items: center;
     width: 100%;
     height: 94vh;
+    overflow-y: scroll;
 }
 
 .firstRow {
@@ -16,6 +17,7 @@
 
 .title {
     font-size: 2rem;
+    text-align: center;
 }
 
 .websiteDesc {
@@ -36,8 +38,8 @@
 
 .secondRow {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: space-evenly;
+    align-items: flex-start;
     width: 100%;
     height: 100%;
     background-color: whitesmoke;
@@ -75,11 +77,13 @@
 
 .carouselButtonParent {
     position: absolute;
-    bottom: -1.5rem;
+    bottom: -2rem;
     left: 50%;
     right: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     gap: 0rem 1rem;
+    width: fit-content;
 }
 
 .carouselButton {
@@ -96,12 +100,12 @@
     display: flex;
     gap: 0rem 0.5rem;
     justify-content: space-between;
+    margin-bottom: 0.4rem;
 }
 
-.birthdayCardHeaderImage {
-    width: 1.5rem;
-    cursor: pointer;
-    margin-left: 0.5rem;
+.birthdayCardComposerName {
+    font-size: 1.25rem;
+    font-weight: bold;
 }
 
 .portraitAndWorks {
@@ -116,18 +120,29 @@
     border-radius: 10px;
 }
 
-h4 {
-    font-size: 1.25rem;
+.recommendedWorksTitle {
+    font-size: 1.1rem;
     margin-bottom: 0.25rem;
+    font-weight: bold;
+    padding-top: 0.1rem;
+}
+
+.recommendedWorksParent {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem 0rem;
+    width: 100%;
 }
 
 .recommendedWorks {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 0rem 1rem;
     font-size: 1.1rem;
     padding-left: 1px;
-    padding-bottom: 0.75rem;
+    text-overflow: clip;
+    /* max-height: 2rem; */
 }
 
 .recommendedWorks>span {
@@ -139,7 +154,62 @@ h4 {
 }
 
 @media (max-width: 1280px) {
+
+    .homeBody {
+        gap: 2rem 0rem;
+    }
+
+    .firstRow {
+        padding-top: 4rem;
+    }
+
+    .title {
+        font-size: 1.5rem;
+        text-align: center;
+    }
+
+    .websiteDesc {
+        gap: 0.5rem 0rem;
+        font-size: 1.2rem;
+        line-height: 1.75rem;
+    }
+
+    .birthdayCarouselParent {
+        width: 45%;
+    }
+
     .recommendedWorks {
         font-size: 0.9rem;
     }
+}
+
+.qotdParent {
+    width: 30%;
+}
+
+.qotdContent {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem 0rem;
+    margin-top: 1rem;
+}
+
+.qotdQuote {
+    line-height: 1.5rem;
+}
+
+.qotdItem {
+    margin-bottom: 0.5rem;
+}
+
+.qotdAuthor {
+    margin-top: 0.25rem;
+    text-align: end;
+    font-weight: bold;
+    color: brown;
+}
+
+.separator {
+    border: 1px solid gray;
+    border-radius: 10px;
 }
