--- a/client/src/css/navigation.module.css
+++ b/client/src/css/navigation.module.css
@@ -4,9 +4,9 @@
     justify-content: space-between;
     align-items: center;
     background-color: #a52a2a;
-    padding: 0.5rem 0rem;
     z-index: 10;
-    height: 3.5rem;
+    min-height: 3.5rem;
+    max-height: 3.5rem;
 }
 
 .navTitle {
@@ -141,8 +141,10 @@
 }
 
 @media (max-width:1280px) {
+
     .navBar {
-        height: 3rem;
+        min-height: 3rem;
+        max-height: 3rem;
     }
 
     .navTitle {
@@ -151,5 +153,18 @@
 
     .navTitleLogo {
         width: 40px;
+    }
+
+    .hiddenProfileBox {
+        transform: translate(-5%, -15%);
+    }
+
+    .profileBox {
+        gap: 0.5rem 0rem;
+        padding: 0.75rem;
+    }
+
+    .profileButtonParent {
+        font-size: 1.1rem;
     }
 }
