--- a/client/src/css/playlists.module.css
+++ b/client/src/css/playlists.module.css
@@ -1,3 +1,17 @@
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.applyFadeIn {
+    animation: fadeIn 500ms forwards 1;
+}
+
 .playlistBody {
     display: flex;
     flex-direction: column;
@@ -23,7 +37,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 0.25rem 0rem;
+    gap: 0.5rem 0rem;
 }
 
 .noPlaylists>span {
@@ -148,20 +162,39 @@
     border-bottom: 2px solid brown;
 }
 
+.buttonsParent {
+    display: flex;
+    gap: 0rem 1rem;
+    align-items: center;
+}
 
-.addNewPlaylistButton {
+.createButton {
     color: white;
     background-color: brown;
+    border: 2px solid brown;
     font-size: 1rem;
-    text-align: start;
-    padding: 1rem;
+    text-align: center;
+    padding: 0.5rem 1rem 0.5rem 1rem;
     border-radius: 10px;
     cursor: pointer;
     margin-bottom: 5rem;
 }
 
-.addNewPlaylistButton:hover {
+.cancelButton {
+    color: brown;
+    background-color: white;
+    border: 2px solid brown;
+    font-size: 1rem;
+    text-align: center;
+    padding: 0.5rem 1rem 0.5rem 1rem;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-bottom: 5rem;
+}
+
+.createButton:hover {
     background-color: rgb(141, 36, 36);
+    border-color: rgb(141, 36, 36);
 }
 
 .searchForWorkParent {
