--- a/client/src/css/viewComposer.module.css
+++ b/client/src/css/viewComposer.module.css
@@ -13,7 +13,7 @@
 }
 
 .viewComposerMainBody {
-  margin-top: 2rem;
+  padding-top: 2rem;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -21,6 +21,8 @@
   gap: 0rem 5rem;
   opacity: 0;
   padding-left: 4rem;
+  overflow-y: scroll;
+  max-height: 94vh;
 }
 
 .left {
@@ -228,7 +230,7 @@
   }
 
   .viewComposerMainBody {
-    margin-top: 1.75rem;
+    padding-top: 2rem;
     gap: 0rem 3rem;
   }
 
