--- a/client/src/css/allComposers.module.css
+++ b/client/src/css/allComposers.module.css
@@ -25,7 +25,7 @@
 
 .allCompTitle {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   margin-top: 3rem;
   font-weight: bold;
   font-size: 2.5rem;
