--- a/client/src/css/trivia.module.css
+++ b/client/src/css/trivia.module.css
@@ -1,12 +1,13 @@
-.triviaMainBody {
+.triviaIntroMainBody {
     display: flex;
     flex-direction: column;
     gap: 1rem 0rem;
-    align-items: center;
     width: 100%;
     height: 94vh;
-    overflow-y: scroll;
     padding-top: 3rem;
+    padding-left: 6rem;
+    align-items: flex-start;
+    border: 1px solid black;
 }
 
 .header {
@@ -19,6 +20,7 @@
     font-size: 1.1rem;
     line-height: 1.25rem;
     max-width: 70vw;
+    padding-left: 0.1rem;
 }
 
 .startButton {
@@ -35,12 +37,23 @@
     background-color: rgb(141, 36, 36);
 }
 
+.triviaMainBody {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem 0rem;
+    align-items: center;
+    width: 100%;
+    height: 94vh;
+    overflow-y: scroll;
+    padding-top: 3rem;
+}
+
 .triviaQuizBody {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 75vw;
-    gap: 1.75rem 0rem;
+    gap: 1.25rem 0rem;
     z-index: 10;
 }
 
@@ -58,7 +71,7 @@
 .triviaQuizBar {
     border: 1px solid black;
     border-radius: 10px;
-    width: 25rem;
+    width: 32vw;
     min-height: 0.5rem;
     transition: all ease-in-out 1s;
 }
@@ -86,7 +99,7 @@
     padding: 0.5rem;
     text-align: center;
     cursor: pointer;
-    width: 100%;
+    width: 105%;
 }
 
 .triviaQuizAnswer>span {
@@ -97,7 +110,7 @@
     display: flex;
     justify-content: flex-start;
     gap: 0rem 0.5rem;
-    width: 100%;
+    width: 105%;
     margin-top: 0.5rem;
 }
 
@@ -129,7 +142,7 @@ button:disabled {
     margin-bottom: 5rem;
     display: flex;
     flex-direction: column;
-    gap: 2rem 0rem;
+    gap: 0.5rem 0rem;
     align-items: center;
 }
 
@@ -138,25 +151,44 @@ button:disabled {
 }
 
 .scoreAndRestart {
-    position: relative;
     font-size: 2rem;
     width: 63%;
-    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.score {
+    font-weight: bold;
+    padding-right: 1.25rem;
 }
 
 .restartQuiz {
-    position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
     font-size: 1.25rem;
+    display: flex;
+    align-items: center;
+    gap: 0rem 0.25rem;
+}
+
+.restartQuizText {
+    padding-bottom: 0.1rem;
+    font-weight: bold;
+}
+
+.timeElapsedFinal {
+    font-size: 1.25rem;
+    padding-bottom: 0.1rem;
+}
+
+.separator {
+    width: 63%;
+    border: 1px solid black;
 }
 
 .restartQuiz:hover {
     color: brown;
     text-decoration: underline;
     cursor: pointer;
-    font-weight: bold;
 }
 
 .allQuiz {
@@ -164,6 +196,7 @@ button:disabled {
     flex-direction: column;
     gap: 3rem 0rem;
     align-items: center;
+    margin-top: 1rem;
 }
 
 .triviaQuizQuestionFinal {
