--- a/client/src/css/viewWorks.module.css
+++ b/client/src/css/viewWorks.module.css
@@ -34,7 +34,7 @@
   text-align: center;
   margin-bottom: 3rem;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .filterWorksHeader {
