--- a/client/src/css/shared.module.css
+++ b/client/src/css/shared.module.css
@@ -200,7 +200,7 @@
     top: 50%;
     transform: translate(-50%, -50%);
     width: 25rem;
-    border: 2px solid brown;
+    border: 2px solid black;
     border-radius: 10px;
     background-color: white;
     padding: 1rem;
