--- a/client/src/css/allWorks.module.css
+++ b/client/src/css/allWorks.module.css
@@ -18,6 +18,7 @@
     min-height: 94.5vh;
     max-height: 94.5vh;
     overflow-y: auto;
+    padding-left: 1rem;
 }
 
 .allWorksParent {
@@ -35,21 +36,25 @@
 
 .allWorksBody {
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
     margin-top: 2rem;
     padding-bottom: 3rem;
     min-width: 82.5vw;
 }
 
-.searchForWork {
+.searchParent {
+    position: relative;
     width: 100%;
+    margin-top: 2rem;
+}
+
+.searchForWork {
+    min-width: 85vw;
+    max-width: 85vw;
     border: none;
     border-bottom: 1px solid black;
-    margin-top: 2rem;
     font-size: 1.3rem;
-    transition: all ease-in-out 500ms;
+    padding-bottom: 0.1rem;
 }
 
 .searchForWork:focus {
@@ -57,16 +62,33 @@
     border-bottom: 2px solid brown;
 }
 
+.searchIcon {
+    position: absolute;
+    right: 0.1rem;
+}
+
 .searchResult {
     display: flex;
     flex-direction: column;
     gap: 1rem 0rem;
+    max-width: 85vw;
+    min-width: 85vw;
+    align-items: center;
 }
 
 .workCard {
     display: grid;
-    grid-template-columns: 60rem 40rem auto;
-    width: 100%;
+    grid-template-columns: 3fr 2fr 0fr;
+    max-width: 85vw;
+    min-width: 85vw;
+    align-items: center;
     font-size: 1.25rem;
-    justify-content: left;
+    border-bottom: 1px solid black;
+    padding-bottom: 0.5rem;
+    white-space: pre-wrap;
+    word-break: break-word;
+}
+
+.noResults {
+    font-size: 1.25rem;
 }
