--- a/client/src/css/homepage.module.css
+++ b/client/src/css/homepage.module.css
@@ -68,6 +68,7 @@
     border: 1px solid black;
     background-color: whitesmoke;
     border-radius: 10px;
+    scroll-behavior: smooth;
 }
 
 .birthdayCarousel::-webkit-scrollbar {
