--- a/client/src/css/playlists.module.css
+++ b/client/src/css/playlists.module.css
@@ -8,6 +8,12 @@
     }
 }
 
+.playlistParent {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .applyFadeIn {
     animation: fadeIn 500ms forwards 1;
 }
@@ -16,12 +22,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 85vw;
     height: 94vh;
 }
 
 .title {
     margin-top: 3rem;
+    align-self: flex-start;
 }
 
 .playlistContent {
@@ -52,6 +59,10 @@
     cursor: pointer;
     text-align: center;
     width: 10rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0rem 0.25rem;
 }
 
 .createPlaylist:hover {
@@ -64,8 +75,8 @@
     margin-top: 1rem;
     width: 100%;
     max-height: 94vh;
-    padding-left: 15rem;
-    padding-right: 15rem;
+    /* padding-left: 15rem; */
+    /* padding-right: 15rem; */
     overflow-y: auto;
 }
 
@@ -121,8 +132,8 @@
 .newPlaylistBody {
     max-height: 94vh;
     width: 100%;
-    padding-left: 15rem;
-    padding-right: 15rem;
+    padding-left: 8rem;
+    padding-right: 8rem;
     overflow-y: auto;
 }
 
@@ -132,6 +143,7 @@
     align-items: flex-start;
     justify-content: center;
     gap: 2rem 0rem;
+    margin-bottom: 8rem;
 }
 
 .newPlaylistNameParent {
@@ -225,6 +237,10 @@
     cursor: pointer;
 }
 
+.searchParent {
+    width: 100%;
+}
+
 .searchForWork {
     width: 100%;
     border: none;
@@ -232,7 +248,6 @@
     margin-top: 0.25rem;
     margin-bottom: 1rem;
     font-size: 1.3rem;
-    transition: all ease-in-out 500ms;
 }
 
 .searchForWork:focus {
@@ -242,6 +257,11 @@
     border-bottom: 2px solid brown;
     margin-top: 0.25rem;
     margin-bottom: 1rem;
+}
+
+.searchIcon {
+    position: absolute;
+    right: 0.1rem;
 }
 
 .deleteButton {
