--- a/client/src/css/musicPlayer.module.css
+++ b/client/src/css/musicPlayer.module.css
@@ -1,10 +1,11 @@
 .musicPlayerBody {
   position: fixed;
-  width: 35rem;
+  width: 40rem;
   height: 10rem;
-  left: 1rem;
-  top: 5rem;
+  left: 5rem;
+  top: 4.75rem;
   z-index: 100;
+  padding-left: 5rem;
 }
 
 .musicPlayer {
@@ -144,6 +145,11 @@
   gap: 1rem 0rem;
   animation: slideRight 200ms;
   z-index: 10;
+  background-color: white;
+  border: 2px solid brown;
+  border-radius: 10px;
+  padding: 0.5rem;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 5px 0px;
 }
 
 .currentVol {
