--- a/client/src/css/playlists.module.css
+++ b/client/src/css/playlists.module.css
@@ -95,10 +95,13 @@
 .playlistTitleAndArrow {
     display: flex;
     align-items: center;
-}
-
-.playlistTitleArrow {
     cursor: pointer;
+    -webkit-user-select: none;
+    /* Safari */
+    -ms-user-select: none;
+    /* IE 10 and IE 11 */
+    user-select: none;
+    /* Standard syntax */
 }
 
 .playlistActionsParent {
