--- a/client/src/css/playlists.module.css
+++ b/client/src/css/playlists.module.css
@@ -39,12 +39,10 @@
 }
 
 .noPlaylists {
-    margin-top: 2rem;
-    width: 25rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 0.5rem 0rem;
+    width: 100%;
 }
 
 .noPlaylists>span {
@@ -63,6 +61,7 @@
     align-items: center;
     justify-content: center;
     gap: 0rem 0.25rem;
+    margin-top: 0.5rem;
 }
 
 .createPlaylist:hover {
@@ -169,6 +168,7 @@
     border: none;
     outline: none;
     border-bottom: 1px solid black;
+    width: 25rem;
 }
 
 .newPlaylistName:focus {
